deployments/kubernetes/base/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 2
  serviceName: api
  template:
    metadata:
      labels:
        app: api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: api
        image: registry.digitalocean.com/lee-aaron-registry/shuudann-api
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
