deployments/kubernetes/base/scythe.yaml
apiVersion: v1
kind: Service
metadata:
  name: scythe
  labels:
    app: scythe
spec:
  type: ClusterIP
  selector:
    app: scythe
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scythe
  labels:
    app: scythe
spec:
  selector:
    matchLabels:
      app: scythe
  replicas: 2
  template:
    metadata:
      labels:
        app: scythe
    spec:
      containers:
      - name: scythe
        image: registry.digitalocean.com/lee-aaron-registry/shuudann-scythe
        imagePullPolicy: Always
        ports:
        - containerPort: 80
