deployments/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: root-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01-issuer
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "shuudann.com"
    - "*.shuudann.com"
    secretName: root-tls
  rules:
  - host: "shuudann.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: scythe
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: api
            port:
              number: 8000
  - host: "services.shuudann.com"
    http:
      paths:
      - pathType: Exact
        path: /webhook
        backend:
          service:
            name: discord
            port:
              number: 9000
